
  * Expanded the statistics overlay for the TIA image to also show
    Display Format and Bankswitch type information.

  * Added '-ss1x' commandline argument and associated UI item, used to
    generate snapshots in 1x mode, independent of the filtering/scaling
    currently in use.

  * Various path textboxes in the UI now recognize './' (or '.\') to mean
    the current directory.  In Linux/UNIX, '~/' is also recognized to
    mean your home directory.

  * Large speedup in loading directories with many files in the ROM launcher.

  * Fixed reset issue in 3E, 4A50, AR, CV, E7, F4SC, F6SC, F8SC, FASC and MC
    ROMs; the internal RAM wasn't being randomized after the initial reset.

  * M6532/RIOT RAM is now randomized at every reset, not just when the
    emulation starts.

  * Fixed bug in _diff pseudo-registers in the debugger; they were actually
    defined backwards.

  * Added fix for 'Challenge/Surfers Delight' ROM; the startup bank was
    incorrect.  Combined with the new 'Override Properties' functionality,
    you can now play both games directly from the UI (no need to use the
    commandline).

  * Fixed paddle issue with Activision Casino ROM; the last card in game 4
    can now be reached.

  * Added new pseudo-registers to the debugger, useful for conditional
    breakpoints (_fcount, _cclocks, _vsync, _vblank).

  * Added 'timing' commandline argument functionality to the UI, so you no
    longer need to use the commandline to set it.

  * Size restrictions on the TIA image are now strictly enforced.  The
    maximum height of a 1x TIA image is now 256 lines.

  * Added a new setting to the 'fullres' option named 'auto'.  Using
    'auto' will let Stella decide the best videomode to use in fullscreen.

  * Changed 'gl_fsmax' option to mean 'scale TIA image in fullscreen'.  It
    will have no effect on UI modes.

  * Changed 'gl_aspect' option to range 80-100 (previously, it was 50-100).
